force-app/main/default/objects/Contact/fields/Account_number__c.field-meta.xml
<CustomField>
    <fullName>Account_number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account-number</label>
    <type>Text</type>
</CustomField>