force-app/main/default/objects/Contact/fields/CalCulate7Minfield__c.field-meta.xml
<CustomField>
    <fullName>CalCulate7Minfield__c</fullName>
    <formula>(NOW()+(0.00486111111))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalCulate7Minfield</label>
    <type>DateTime</type>
</CustomField>