force-app/main/default/objects/Contact/fields/X1minCalculationAfterCreated__c.field-meta.xml
<CustomField>
    <fullName>X1minCalculationAfterCreated__c</fullName>
    <description>calculating time after 1 min</description>
    <formula>(NOW() + 0.00069444444)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1minCalculationAfterCreated</label>
    <type>DateTime</type>
</CustomField>