force-app/main/default/objects/Contact/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT(ISBLANK(Phone)),
   NOT(REGEX(Phone, &quot;[7-9]{1}[0-9]{9}&quot;))
)</errorConditionFormula>
    <errorMessage>Phone number should be of 10 digits</errorMessage>
</ValidationRule>